--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The Best Christmas Landing Page EVER</title>
+  <title>Лучший подарок к Новому году!</title>
   <meta name="description" content="It's the Best Christmas Landing Page EVER, not really much more to say.">
   <meta name="author" content="George Phillips, http://cloudcannon.com">
 
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="twelve column">
       	<!-- Probably want to change Cloud Cannon to your company -->
-        <h1 class="editable"><small><a href="http://cloudcannon.com" target="top">CloudCannon</a> wishes you a</small> Merry Christmas</h1>
+        <h1 class="editable"><small><a href="http://cloudcannon.com" target="top">Pullnfit</a> желает вам a</small> Счастливого Нового Года</h1>
 
         <section class="cube-wrapper">
           <div class="cube">
@@ -49,21 +49,21 @@
             <figure class="present">
               <div class="coupon">
                 <span class="coupon-back">
-                  COUPON
+                  КУПОН
                 </span>
                 <span class="coupon-front">
-                  ONE FREE<br>MONTH
+                  БЕСПЛАТНО<br>МЕСЯЦ
                 </span>
               </div>
             </figure>
           </div>
-          <p>(Click me to open)
+          <p>(Нажмите, чтобы открыть)
         </p></section>
         <div class="open-message">
-          <h2 class="editable">Huzzah</h2>
-          <p class="editable">What a thoughtful gift. You can use it straight away using the coupon <code>MerryChristmas</code>.</p>
-          <a class="button editable" href="https://app.cloudcannon.com/">Login</a>
-          <a class="button button-primary editable" href="https://app.cloudcannon.com/users/sign_up">Create a Free Account</a>
+          <h2 class="editable">Ура!</h2>
+          <p class="editable">Какой продуманный подарок. Вы можете использовать его сразу, используя купон<code>НовыйГод</code>.</p>
+          <a class="button editable" href="https://pullnfit.ru/">Перейти на сайт</a>
+          <a class="button button-primary editable" href="https://goo.gl/forms/Cw7gLCwVHHkaIvWv2">Заполнить анкету</a>
         </div>  
 
    	
