--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Лучший подарок к Новому году!</title>
-  <meta name="description" content="It's the Best Christmas Landing Page EVER, not really much more to say.">
-  <meta name="author" content="George Phillips, http://cloudcannon.com">
+  <meta name="description" content="Лучший подарок к Новому году, чтобы порадовать себя!">
+  <meta name="author" content="Рахимян, https://pullnfit.ru/">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="twelve column">
       	<!-- Probably want to change Cloud Cannon to your company -->
-        <h1 class="editable"><small><a href="http://cloudcannon.com" target="top">Pullnfit</a> желает вам a</small> Счастливого Нового Года</h1>
+        <h1 class="editable"><small><a href="https://pullnfit.ru/" target="top">Pullnfit</a> желает вам a</small> Счастливого Нового Года</h1>
 
         <section class="cube-wrapper">
           <div class="cube">
