--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="twelve column">
       	<!-- Probably want to change Cloud Cannon to your company -->
-        <h1 class="editable"><small><a href="https://pullnfit.ru/" target="top">Pullnfit</a> желает вам</small> Счастливого Нового Года</h1>
+        <h1 class="editable"><small><a href="https://pullnfit.ru/" target="top">PULLNFIT</a> поздравляет Вас</small> С Новым Годом</h1>
 
         <section class="cube-wrapper">
           <div class="cube">
@@ -61,7 +61,7 @@
         </p></section>
         <div class="open-message">
           <h2 class="editable">Ура!</h2>
-          <p class="editable">Какой продуманный подарок. Чтобы получить его используйте купон <br><code>НовыйГод</code>.</p>
+          <p class="editable">И дарит крутой подарок! Чтобы активировать используйте при регистрации купон <br><code>НовыйГод</code>.</p>
           <a class="button editable" href="https://pullnfit.ru/">Перейти на сайт</a>
           <a class="button button-primary editable" href="https://goo.gl/forms/Cw7gLCwVHHkaIvWv2">Заполнить анкету</a>
         </div>  
