--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           <p>(Нажмите, чтобы открыть)
         </p></section>
         <div class="open-message">
-          <h2 class="editable">Ура!</h2>
-          <p class="editable">И дарит крутой подарок! Чтобы активировать используйте при регистрации купон <br><code>НовыйГод</code>.</p>
+          <h2 class="editable">И дарит крутой подарок!</h2>
+          <p class="editable">Чтобы активировать подарок используйте при регистрации купон <br><code>НовыйГод</code>.</p>
           <a class="button editable" href="https://pullnfit.ru/">Перейти на сайт</a>
           <a class="button button-primary editable" href="https://goo.gl/forms/Cw7gLCwVHHkaIvWv2">Заполнить анкету</a>
         </div>  
