--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="twelve column">
       	<!-- Probably want to change Cloud Cannon to your company -->
-        <h1 class="editable"><small><a href="https://pullnfit.ru/" target="top">PULLNFIT</a> поздравляет Вас</small> С Новым Годом</h1>
+        <h1 class="editable"><small><a href="https://pullnfit.ru/" target="top">PULLNFIT</a> поздравляет Вас с</small>Новым Годом</h1>
 
         <section class="cube-wrapper">
           <div class="cube">
